# ocr-test

./: .CMakeLists.txt.swp  CMakeLists.txt
src/: ocr.cpp  ocr.h  ocr_test.cpp
src/alprgpusupport/: CMakeLists.txt  alprgpusupport.cpp  alprgpusupport.h  gpu_image_buffer.cpp  video_reader_accelerated.cpp
src/alprgpusupport/stub/: CMakeLists.txt  alprgpusupport_cudaimpl.h  gpu_image_buffer_stub.cpp  stub.cpp  update_stub.sh  video_reader_accelerated_stub.cpp
src/alprlog/: .CMakeLists.txt.swp  CMakeLists.txt  alprlog.h  alprlog_stub.cpp
src/alprsupport/: CMakeLists.txt  base64.cpp  base64.h  cjson.c  config.cpp  config.h  config_base.cpp  config_base.h  config_base_impl.cpp  config_base_impl.h  config_helper.cpp  config_helper.h  cpu_detect.cpp  cpu_detect.h  cpu_detect_android.cpp  cpu_detect_arm.cpp  exports.h  fastjpeg.cpp  fastjpeg.h  filesystem.cpp  filesystem.h  platform.cpp  platform.h  profiler.cpp  profiler.h  string_utils.cpp  string_utils.h  timing.cpp  timing.h
src/alprsupport/streamcrypt/: CMakeLists.txt  encrypt_file.cpp  filecryptstream.cpp  filecryptstream.h  filecryptstream_c.h  filecryptstream_cryptopp.cpp  salsa20.h
src/alprsupport/tclap/: CmdLine.h  FunctionConstraint.h
src/backend/: buffer_manager.cpp  buffer_manager.h  onnxruntime.cpp  onnxruntime.h
src/postprocess/: postprocess.cpp  postprocess.h  regexrule.cpp  regexrule.h  utility.cpp  utility.h
